--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,8 @@ h5 {
     /* width: calc(100% - 224px) !important;  */
   }
   .containerLarge {
-    margin: 56px;
+    margin-left: 56px;
+    margin-right: 56px;
     padding: 56px;
   }
 
@@ -320,17 +321,17 @@ h5 {
 }
 
 /* Ajustes responsivos para el contenedor */
-@media (min-width: 1300px) {
+/* @media (min-width: 1300px) {
   .containerLarge {
     min-height: 18rem;
   }
-}
+} */
 
-@media (min-width: 768px) and (max-width: 1299px) {
+/* @media (min-width: 768px) and (max-width: 1299px) {
   .containerLarge {
     min-height: 18rem !important;
   }
-}
+} */
 
 @media (min-width: 600px) and (max-width: 767px) {
   .containerLarge {
@@ -685,8 +686,11 @@ h5 {
 .section5 {
   /* background-color: black; */
   color: white;
+  margin-top: 150px;
   padding: 56px;
   position: relative;
+  background-color: var(--color1);
+
 }
 
 /* .expertise-title {
@@ -722,11 +726,17 @@ h5 {
 }
 
 .expertiseFlexItems h4 {
-  color: var(--color6);
+  color: var(--white);
+  padding: 45px;
+  padding-left: 25px;
+  margin-top: 30px;
+  background-color: var(--color1);
   font-size: 22px;
   font-weight: 300;
   line-height: 130%;
   margin-bottom: 30px;
+  border: var(--white) 1px solid;
+  border-radius: 2px 30px;
 }
 /* .dot {
   background-color: white;
@@ -735,6 +745,13 @@ h5 {
 .expertiseFlexItems p {
   font-size: 20px;
   line-height: 140%;
+  color: var(--color6);
+  letter-spacing: 1.5px;
+  background-color: var(--color1);
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+
 }
 @media (max-width: 768px) {
   .expertiseFlexContainer {
@@ -1756,7 +1773,7 @@ line {
 }
 
 .titleH3section7 {
-  margin-top: -100px !important;
+  /* margin-top: -100px !important; */
   color: var(--color6);
 }
 
@@ -1852,3 +1869,7 @@ line {
   -webkit-transform: translatex(-20px);
   -moz-transform: translatex(-20px);
 }
+
+
+              
+      
