--- a/src/index.css
+++ b/src/index.css
@@ -1530,7 +1530,7 @@ header {
   color: var(--color6);
   text-shadow: 1px 1px 0 var(--color1), -1px -1px 0 var(--color1),
     1px -1px 0 var(--color1), -1px 1px 0 var(--color1);
-  /* border: #85ed45 1px solid; */
+  border: #85ed45 1px solid;
 }
 
 @media (width <= 480px) {
