--- a/src/index.css
+++ b/src/index.css
@@ -1335,7 +1335,7 @@ header {
   margin-top: 5rem;
   font-weight: bold;
   transition: 0.3s ease;
-  border: var(--white) 1px solid;
+  /* border: var(--white) 1px solid; */
 }
 
 .email-button:hover {
@@ -1805,41 +1805,34 @@ line {
   /* margin-bottom: 3rem; */
 }
 
-.sliderContainer img {
+.sliderDiv {
   width: 15%; /* Añadido: ancho del 10% */
-  opacity: 0.9;
+  opacity: 1;
   height: 100%; /* Añadido: altura del 100% */
   object-fit: cover; /* Añadido: ajuste de objeto */
-  border-radius: 5px; /* Añadido: radio de borde de 10px */
   border: 1px solid var(--color1);
   transition: all ease-in-out 0.5s; /* Añadido: transición de 0.5 segundos */
 }
 
-.sliderContainer img:hover {
-  width: 30%;
-  opacity: 1;
-  /* scale: 1.02; */
-  /* z-index: 3; */
-  /* border: var(--white) 10px 2px 3px 10px solid; */
-}
-
-.sliderContainer div {
-  width: 15%; /* Añadido: ancho del 10% */
-  opacity: 0.9;
-  height: 100%; /* Añadido: altura del 100% */
+.sliderDiv img {
   object-fit: cover; /* Añadido: ajuste de objeto */
-  border-radius: 5px; /* Añadido: radio de borde de 10px */
-  border: 1px solid var(--color1);
-  transition: all ease-in-out 0.5s; /* Añadido: transición de 0.5 segundos */
+  width: 100%;
+  height: 100%;
+  opacity: 0.97;
+  border-radius: 3px ; /* Añadido: radio de borde de 10px */
+
+
 }
 
-.sliderContainer div:hover {
+.sliderDiv:hover {
   width: 30%;
   opacity: 1;
   /* scale: 1.02; */
   /* z-index: 3; */
-  /* border: var(--white) 10px 2px 3px 10px solid; */
+  border: var(--white) 10px 2px 3px 10px solid;
 }
+
+
 
 .divola {
   /* position: relative; */
