--- a/src/index.css
+++ b/src/index.css
@@ -1819,9 +1819,7 @@ line {
   width: 100%;
   height: 100%;
   opacity: 0.97;
-  border-radius: 3px ; /* Añadido: radio de borde de 10px */
-
-
+  border-radius: 3px; /* Añadido: radio de borde de 10px */
 }
 
 .sliderDiv:hover {
@@ -1832,8 +1830,6 @@ line {
   border: var(--white) 10px 2px 3px 10px solid;
 }
 
-
-
 .divola {
   /* position: relative; */
   background-image: url(/juegos.png); /* Imagen de fondo */
@@ -1843,14 +1839,14 @@ line {
 }
 
 .divola:hover h4 {
-  display:block }
-
+  display: block;
+}
 
 @media (768px <= width <= 960px) {
   .sliderContainer img {
     width: 19%;
   }
-  
+
   .divola h4:hover {
     display: block;
   }
@@ -1944,15 +1940,34 @@ line {
   -moz-transform: translatex(-20px);
 }
 
+/* -------------      efecto rotacion      ---------- */
 
-.node{
-  display: inline;
-  position: relative;
+.rotacion {
+  display: flex;
+  opacity: 0;
+  animation: rotate-in 2s ease-in forwards;
+  animation-timeline: view();
 }
-.node2{
-  position: absolute;
-  background-image: url(/juegos.png);
-  height: 30px ;
-  width: 30px;
+@keyframes rotate-in {
+  0% {
+    opacity: 0;
+    transform: rotate(10deg);
+  }
+  20% {
+    transform: rotate(0deg);
+  }
+  30%{
+    opacity: 1;
 
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+/* -------------      efecto rotacion FIN      ---------- */
+
+
+.impar{
+  margin-top: 5vw;
 }
