--- a/src/index.css
+++ b/src/index.css
@@ -1795,7 +1795,7 @@ line {
 
 .sliderContainer {
   position: relative;
-  background-color: #fefefe50;
+  /* background-color: #fefefe50; */
   margin: 30px 10px 30px 10px; /* Añadido: margen superior, derecho, inferior e izquierdo */
   width: 100%; /* Añadido: ancho del 70% */
   height: 600px; /* Añadido: altura de 450px */
@@ -1845,7 +1845,7 @@ line {
 @media (768px <= width <= 960px) {
   .sliderDiv {
     width: 19%;
-    background-color: green;
+    /* background-color: green; */
     /* height:fit-content !important; */
   }
 
@@ -1860,15 +1860,17 @@ line {
     margin-top: 20px;
     opacity: 1;
     border-radius: 30px 2px;
+    /* background-color: #85ed45; */
   }
   .sliderContainer {
-    /* background-color: #ae5d42; */
-    margin-top: 200px;
-    margin-bottom: 380px;
+    background-color: #ae5d42;
+    /* margin-top: 200px; */
+    margin-bottom: 120px;
 
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: fit-content;
     align-items: center;
   }
   .sliderDiv:hover {
