--- a/src/index.css
+++ b/src/index.css
@@ -1859,11 +1859,12 @@ line {
     height: 200px;
     margin-top: 20px;
     opacity: 1;
-    border-radius: 30px 2px;
+    border-radius:  2px;
+
     /* background-color: #85ed45; */
   }
   .sliderContainer {
-    background-color: #ae5d42;
+    /* background-color: #ae5d42; */
     /* margin-top: 200px; */
     margin-bottom: 120px;
 
@@ -1874,7 +1875,7 @@ line {
     align-items: center;
   }
   .sliderDiv:hover {
-    width: 80%;
+    width: 82%;
   }
 }
 
