--- a/src/index.css
+++ b/src/index.css
@@ -503,6 +503,10 @@ h5 {
   }
 }
 
+
+.green {
+  background-color: green;
+}
 /* ============================   Section HERO2 ========================== */
 
 /* ============================   Section ENCABEZADO PROJECTS ========================== */
