--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
   border-radius: 9999px;
 }
 
-.navbar-container {
+/* .navbar-container {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 50 !important;
-}
+} */
